Days 6 Of learning TS , 11:17 PM  Feb 12 of 2026

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "dependencies": {},
+  "dependencies": {
+    "crypto": "^1.0.1"
+  },
   "devDependencies": {
     "typescript": "^5.9.3"
   }
